finished the javaScript function for display

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                   />
                 </div>
               </div>
-              <div class="form-group">
+              <div class="form-group mb-3">
                 <input
                   type="number"
                   class="form-control"
@@ -57,10 +57,53 @@
                 <input
                   type="submit"
                   value="calculate"
-                  class="btn btn-dark btn-block"
+                  class="btn btn-secondary btn-lg btn-block form-control"
                 />
               </div>
             </form>
+            <!-- loader -->
+            <!-- <div id="loading">
+              <img src="./img/Spinner-1s-200px.svg" alt="loading" />
+            </div> -->
+            <!-- results -->
+            <div id="results" class="pt-4">
+              <h5>Results</h5>
+              <div class="form-group">
+                <div class="input-group mb-3">
+                  <span class="input-group-text">Monthly payment</span>
+                  <input
+                    type="number"
+                    class="form-control"
+                    id="monthly-payment"
+                    disabled
+                  />
+                </div>
+              </div>
+
+              <div class="form-group">
+                <div class="input-group mb-3">
+                  <span class="input-group-text">Total payment</span>
+                  <input
+                    type="number"
+                    class="form-control"
+                    id="total-payment"
+                    disabled
+                  />
+                </div>
+              </div>
+
+              <div class="form-group">
+                <div class="input-group mb-3">
+                  <span class="input-group-text">Total interest</span>
+                  <input
+                    type="number"
+                    class="form-control"
+                    id="total-interest"
+                    disabled
+                  />
+                </div>
+              </div>
+            </div>
           </div>
         </div>
       </div>
@@ -79,5 +122,7 @@
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
     -->
+
+    <script src="./app.js "></script>
   </body>
 </html>
