done with the functionalities

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       crossorigin="anonymous"
     />
 
-    <title>Hello, world!</title>
+    <title>Bigg's Loan calculator</title>
   </head>
   <body class="bg-dark">
     <div class="container">
@@ -57,7 +57,7 @@
                 <input
                   type="submit"
                   value="calculate"
-                  class="btn btn-secondary btn-lg btn-block form-control"
+                  class="btn btn-secondary btn-lg form-control"
                 />
               </div>
             </form>
