--- a/index.html
+++ b/index.html
@@ -14,6 +14,15 @@
     />
 
     <title>Bigg's Loan calculator</title>
+    <style>
+      #loading,
+      #results {
+        display: none;
+      }
+      #loading img {
+        width: 100px;
+      }
+    </style>
   </head>
   <body class="bg-dark">
     <div class="container">
@@ -62,9 +71,9 @@
               </div>
             </form>
             <!-- loader -->
-            <!-- <div id="loading">
+            <div id="loading">
               <img src="./img/Spinner-1s-200px.svg" alt="loading" />
-            </div> -->
+            </div>
             <!-- results -->
             <div id="results" class="pt-4">
               <h5>Results</h5>
